implemented password change

--- a/src/main/resources/templates/profileSettings.html
+++ b/src/main/resources/templates/profileSettings.html
@@ -53,12 +53,24 @@
 
                 <div class="row mt-3">
                     <div class="col-md-6">
-                        <label class="labels">Country</label>
-                        <input type="text" class="form-control" placeholder="country" value="">
+                        <label class="labels">Current password</label>
+                        <input type="password" id="profile-old-pass-input" class="form-control" placeholder="Current password">
                     </div>
                     <div class="col-md-6">
-                        <label class="labels">State/Region</label>
-                        <input type="text" class="form-control" value="" placeholder="state">
+                        <label class="labels">New password</label>
+                        <div class="input-group">
+
+                        <input type="password"b name="new-pass" id="profile-new-pass-input" class="form-control" placeholder="New password">
+                        <span class="input-group-append" id="change-pass-btn" style="display: none">
+                                <button class="btn btn-outline-secondary bg-white  border rounded-pill ms-n5"
+                                        type="button" style="z-index: 0">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                         class="bi bi-check2" viewBox="0 0 16 16">
+                                        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                                    </svg>
+                                </button>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
