--- a/src/main/resources/templates/profileSettings.html
+++ b/src/main/resources/templates/profileSettings.html
@@ -8,9 +8,10 @@
     <div class="row" style="justify-content: center">
         <div>
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                <img class="rounded-circle mt-5" width="150px"
-                     src="/images/icons/person-circle.svg">
-                <button class="btn btn-secondary">Change avatar</button>
+                <img id="avatar" class="rounded-circle mt-5" width="150px" height="150px"
+                     th:src=" ${user.avatar} != null ? *{'data:image/jpeg;base64,'+ user.avatar} : '/images/icons/person-circle.svg'">
+                <br>
+                <button class="btn btn-secondary" id="change-avatar-btn">Change avatar</button>
             </div>
         </div>
         <div>
