--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -42,7 +42,7 @@
                 </div>
             </td>
             <td th:if="${#request.userPrincipal.getName() != user.email}"><span>
-                <button class="btn btn-danger" id="delete"> Delete</button>
+                <button class="btn btn-danger" id="deleteUser"> Delete</button>
             </span></td>
         </tr>
         </tbody>
