change project structure

--- a/src/main/resources/templates/fragments/addNews.html
+++ b/src/main/resources/templates/fragments/addNews.html
@@ -3,7 +3,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="text-center split right modal-body">
-                    <form method="post" action="/" enctype="multipart/form-data">
+                    <form method="post" action="/news" enctype="multipart/form-data">
                         <div>
                             <textarea class="form-control mb-3" name="title" id="title" placeholder="Title"></textarea>
                         </div>
