now editors can choose the logo of the resource

--- a/src/main/resources/templates/fragments/addNews.html
+++ b/src/main/resources/templates/fragments/addNews.html
@@ -16,10 +16,19 @@
                             <input type="url" class="form-control" name="source" id="source" placeholder="Source url">
                         </div>
                         <div class="custom-file mb-3">
-                            <label class="custom-file-label" for="sourceLogo" id="sourceLogo-label">Select source
-                                logo</label>
-                            <input type="file" name="sourceLogo" class="custom-file-input" id="sourceLogo"
-                                   onchange="getFileName('sourceLogo')">
+<!--                            <label class="custom-file-label" for="sourceLogo" id="sourceLogo-label">Select source-->
+<!--                                logo</label>-->
+<!--                            <input type="file" name="sourceLogo" class="custom-file-input" id="sourceLogo"-->
+<!--                                   onchange="getFileName('sourceLogo')">-->
+                            <select class="form-select" id="js-select2">
+<!--                                <option selected>Choose the source logo</option>-->
+                                <option value="ESPN" selected>ESPN</option>
+                                <option value="ANDSCAPE">ANDSCAPE</option>
+                            </select>
+<!--                            <select id="js-select2" style="width: 200px;">-->
+<!--                                <option value="Spain" selected>Spain</option>-->
+<!--                                <option value="United_Kingdom">United Kingdom</option>-->
+<!--                            </select>-->
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
