--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,12 +13,12 @@
                aria-controls="collapseExample">
                 Sign up
             </a>
-            <a class="btn btn-primary mr-1" role="button" onclick="signIn('admin@gmail.com','admin')">
+            <a class="btn btn-primary mr-1" role="button" onclick="signIn('admin@gmail.com','wccbZvtz@SfKa+W3')">
                 Login as Admin
             </a>
-            <a class="btn btn-primary mr-1" role="button" onclick="signIn('user@yandex.com', 'user')">
-                Login as User
-            </a>
+<!--            <a class="btn btn-primary mr-1" role="button" onclick="signIn('user@yandex.com', 'user')">-->
+<!--                Login as User-->
+<!--            </a>-->
         </div>
         <div>
             <form id="loginForm" class="form-signIn form-inline">
