--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <input class="horizontal-center" type="checkbox" value="" id="isEditor"
                            th:checked="${user.isEditor}">
-                    <label class="form-check-label" for="isEditor">Editor</label>
+                    <label class="form-check-label" for="isEditor">EDITOR</label>
                 </div>
             </td>
             <td th:if="${#request.userPrincipal.getName() != user.email}"><span>
