--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,10 +27,11 @@
 
         <script src="/js/jquery-3.6.1.min.js" ></script>
 
+        <script src="/js/notify.min.js"></script>
+
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-        <script src="/js/backToTop.js" defer></script>
         <script src="/js/script.js" defer></script>
         <script src="/js/users.js" defer></script>
         <script src="/js/news.js" defer></script>
