--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
         <div class="row" style="justify-content: center; align-content: center">
             <div class="collapse" id="collapseExample">
                 <div class="card card-body">
-                    <form style="text-align: center">
+                    <form style="text-align: center" id="sign-up-form">
                         <div class="mb-3">
                             <input type="text" class="form-control" id="nicknameSignUpInput" placeholder="Nickname">
                         </div>
@@ -65,7 +65,7 @@
                             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                         </div>
                         <div class="mb-3">
-                            <input type="password" class="form-control" id="passwordSignUpInput" placeholder="Password">
+                            <input type="password" class="form-control" id="passwordSignUpInput" placeholder="Password" >
                         </div>
                         <button type="button" id="signUp-form-btn" class="btn btn-primary">Sign up</button>
                     </form>
