--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
                aria-controls="collapseExample">
                 Sign up
             </a>
-            <a class="btn btn-primary mr-1" role="button" onclick="signIn('admin@gmail.com','wccbZvtz@SfKa+W3')">
+            <a class="btn btn-primary mr-1" role="button" onclick="signIn('admin@gmail.com','gSKkf@%rM^@(Mqhx')">
                 Login as Admin
             </a>
             <!--            <a class="btn btn-primary mr-1" role="button" onclick="signIn('user@yandex.com', 'user')">-->
@@ -53,7 +53,7 @@
                                 <input type="email" class="form-control" id="emailSignUpInput"
                                        aria-describedby="emailHelp" placeholder="Email address">
                                     <span class="input-group-append">
-                                        <button type="button" id="temp-mail-redirect"
+                                        <button type="button" id="temp-mail-redirect" href=""
                                                 class="btn btn-outline-secondary bg-white  border rounded-pill ms-n5">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                  fill="currentColor" class="bi bi-info-lg" viewBox="0 0 16 16">
